<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_size_medium"
        android:text="@string/info_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_toolbar" />


    <RelativeLayout
        android:id="@+id/ad_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/banner_height"
        android:maxHeight="@dimen/banner_height_max"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_ad_unit_id" />

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" />

        <com.applovin.mediation.ads.MaxAdView
            android:id="@+id/applovinAdView"
            xmlns:maxads="http://schemas.applovin.com/android/1.0"
            maxads:adUnitId="@string/app_lovin_banner_unit_id"
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/banner_height" />

        <com.applovin.mediation.ads.MaxAdView
            android:id="@+id/applovinAdView2"
            xmlns:maxads="http://schemas.applovin.com/android/1.0"
            maxads:adUnitId="@string/app_lovin_banner_med_unit_id"
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/banner_height" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>