<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <RelativeLayout
        android:id="@+id/main_content_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_content_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_content_urls_wrapper"
            android:layout_below="@+id/main_toolbar" />

        <RelativeLayout
            android:id="@+id/main_content_urls_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ad_wrapper"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/main_content_facebook_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_size_small"
                android:layout_marginRight="@dimen/margin_padding_size_small"
                android:layout_toStartOf="@+id/main_content_info_link"
                android:padding="@dimen/margin_padding_size_small"
                android:text="@string/visit_us_on_facebook"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/main_content_info_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="@dimen/margin_padding_size_small"
                android:layout_marginRight="@dimen/margin_padding_size_small"
                android:padding="@dimen/margin_padding_size_small"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ad_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="@dimen/banner_height_max"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"
                android:visibility="gone"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/admob_ad_unit_id" />

            <LinearLayout
                android:id="@+id/banner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@color/colorPrimaryDark"/>

            <com.applovin.mediation.ads.MaxAdView
                android:id="@+id/applovinAdView"
                xmlns:maxads="http://schemas.applovin.com/android/1.0"
                maxads:adUnitId="@string/app_lovin_banner_unit_id"
                android:background="@color/browser_actions_bg_grey"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/banner_height" />
            <com.applovin.mediation.ads.MaxAdView
                android:id="@+id/applovinAdView2"
                xmlns:maxads="http://schemas.applovin.com/android/1.0"
                maxads:adUnitId="@string/app_lovin_banner_med_unit_id"
                android:background="@color/browser_actions_bg_grey"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/banner_height" />

        </RelativeLayout>



    </RelativeLayout>


    <ImageView
        android:id="@+id/main_splash_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_transparent"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@android:color/white" />

    </FrameLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_side_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>
