<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout45">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/details_image"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:layout_margin="@dimen/margin_padding_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_toolbar" />

    <TextView
        android:id="@+id/details_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_size_medium"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toTopOf="@+id/details_image"
        app:layout_constraintBottom_toBottomOf="@+id/details_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/details_image" />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_image" />

    <Button
        android:id="@+id/details_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/ad_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/details_rate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:text="@string/rate_us"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/ad_wrapper"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/ad_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/banner_height_max"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_ad_unit_id" />

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" />

        <com.applovin.mediation.ads.MaxAdView
            android:id="@+id/applovinAdView"
            xmlns:maxads="http://schemas.applovin.com/android/1.0"
            maxads:adUnitId="@string/app_lovin_banner_unit_id"
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/banner_height" />

        <com.applovin.mediation.ads.MaxAdView
            android:id="@+id/applovinAdView2"
            xmlns:maxads="http://schemas.applovin.com/android/1.0"
            maxads:adUnitId="@string/app_lovin_banner_med_unit_id"
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/banner_height" />

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_transparent"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@android:color/white" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>